[notes app] : FCM start

--- a/web/index.html
+++ b/web/index.html
@@ -54,6 +54,9 @@
         }
       });
     });
-  </script>
+  </script>\
+  <!-- add this for FCM -->
+  <!-- <script src="https://www.gstatic.com/firebase/7.20.0/firebase-messaging.js"></script> -->
 </body>
 </html>
+ 
